--- a/site/estilo.css
+++ b/site/estilo.css
@@ -196,9 +196,52 @@ ul {
 }
 ul li {
 }
-.chave {
-  display: inline-block;
-    vertical-align: top;
+
+/* Chaves */
+ul.lista_chaves li {
+  margin: 10px 0px 30px;
+  display: block;
+  position: relative;
+}
+ul.lista_chaves li .linha_v {
+  height: 71px;
+  width: 3px;
+  background-color: #dac972;
+  position: absolute;
+  left: 298px;
+  top: 29px;
+}
+ul.lista_chaves li .linha_h {
+  width: 60px;
+  height: 3px;
+  background-color: #dac972;
+  display: block;
+  position: absolute;
+  left: 300px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+ul.lista_chaves li div.chave {
+  position: relative;
+}
+ul.lista_chaves li div.chave {
+  background-color: #dac972;
+  width: 200px;
+  text-align: center;
+  color: black;
+  padding: 20px;
+  margin: 10px 0px;
+  border-radius: 10px;
+}
+ul.lista_chaves li div.chave .linha {
+  width: 60px;
+  height: 3px;
+  background-color: #dac972;
+  display: block;
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* Style the buttons that are used to open and close the accordion panel */
