--- a/site/estilo.css
+++ b/site/estilo.css
@@ -12,6 +12,29 @@
 body {
   background: #2b2b2b;
 }
+a {
+  font-weight: bold;
+}
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #151414;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    transition: 0.5s all;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 /* Cabeçalho */
 header {
   background-color: #232323;
@@ -107,6 +130,9 @@ span.erro {
   position: relative;
   display: block;
 }
+select{
+  background-color: #2b2b2b;
+}
 /* Ver campeonato */
 div.campeonatos {
   display: block;
@@ -197,21 +223,29 @@ ul li {
 
 /* Chaves */
 ul.lista_chaves li {
-  margin: 10px 0px 30px;
+  margin: 0px;
   display: block;
   position: relative;
 }
 ul.lista_chaves .coluna_chave:first-child li {
-  margin: 10px 0px 30px;
+  margin: 0px;
 }
 ul.lista_chaves li:last-child {
-  margin: 10px 0px 10px;
+  margin: 0px
   display: block;
   position: relative;
 }
 ul.lista_chaves li div.chave {
-  position: relative;
+  position: absolute;
 }
+
+ul.lista_chaves li div.chave.time1 {
+  top: 0px;
+}
+ul.lista_chaves li div.chave.time2 {
+  bottom: 0px;
+}
+
 
 ul.lista_chaves li div.chave {
   background-color: #dac972;
@@ -219,8 +253,10 @@ ul.lista_chaves li div.chave {
   text-align: center;
   color: black;
   padding: 20px;
-  margin: 10px 0px;
+  margin: 0px;
   border-radius: 10px;
+  height: 20px;
+  width: 200px;
 }
 /*
 ul.lista_chaves li .linha_v {
@@ -253,35 +289,48 @@ ul.lista_chaves li div.chave .linha {
 }
 */
 
-ul.lista_chaves li div.chave .linha {
+ul.lista_chaves li .linha {
   width: 60px;
   height: 3px;
   background-color: #dac972;
   display: block;
   position: absolute;
   left: -60px;
-  top: 50%;
   transform: translateY(-50%);
 }
-ul.lista_chaves li div.chave .quadrado {
+ul.lista_chaves li .quadrado {
   width: 100px;
-  height: 67px;
+  height: 27.6%;
   position: absolute;
   border: 3px solid #dac972;
-  top: 50%;
   transform: translateY(-50%);
   left: -162px;
   border-left: 0px solid black;
+}
+ul.lista_chaves li .quadrado:nth-of-type(6) {
+  transform: translateY(50%);
 }
 ul.lista_chaves {
   overflow-x: scroll;
   white-space: nowrap;
 }
+.tampa {
+  width: 301px;
+  display: block;
+  position: absolute;
+  height: 50%;
+  left: 0px;
+  background-color: #444444;
+  top: 50.550%;
+  z-index: 1;
+  max-width: 100vw;
+}
 
 .coluna_chave {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
   margin-left: 120px;
+  width: 240px;
 }
 
 .coluna_chave:first-child {
@@ -400,4 +449,80 @@ table {
 }
 table * {
   border: 1px solid black;
+}
+/* Tabs */
+input[name="tabs"] {
+  display: none;
+}
+label.label_tab {
+  padding: 12px 6px;
+  display: inline-block;
+  border-bottom: 3px solid #353535;
+  margin-bottom: 30px;
+  transition: 0.5s;
+  cursor:pointer;
+}
+label.label_tab:hover,
+input:checked + label.label_tab {
+  background-color: #353535;
+}
+section#content1,
+section#content2,
+section#content3,
+section#content4 {
+  display: none;
+}
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4 {
+  display: block;
+}
+
+/*Chaves */
+main#tournament{
+  display:flex;
+  flex-direction:row;
+}
+.round{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  width:200px;
+  list-style:none;
+  padding:0;
+}
+.round .spacer{ flex-grow:1; }
+.round .spacer:first-child,
+.round .spacer:last-child{ flex-grow:.5; }
+
+.round .game-spacer{
+  flex-grow:1;
+}
+
+/*
+ *  General Styles
+*/
+
+li.game{
+  padding-left:20px;
+}
+
+li.game.winner{
+  font-weight:bold;
+}
+li.game span{
+  float:right;
+  margin-right:5px;
+}
+
+li.game-top{ border-bottom:1px solid #aaa; }
+
+li.game-spacer{
+  border-right:1px solid #aaa;
+  min-height:40px;
+}
+
+li.game-bottom{
+  border-top:1px solid #aaa;
 }
