--- a/site/estilo.css
+++ b/site/estilo.css
@@ -79,6 +79,7 @@ form>div {
   display: inline-block;
   width: 48%;
   margin-top: 2%;
+  vertical-align: top;
 }
 form>div:nth-of-type(odd) {
   padding-right: 2%;
@@ -121,6 +122,11 @@ form input[type="submit"]:hover {
 }
 form input[type="submit"]:after {
   content: "\A"; white-space: pre-line;
+}
+form textarea[name="desc_campeonato"] {
+  color: #2b2b2b;
+  width: 100%;
+  height: 100px;
 }
 span.erro {
   color: red;
